<resources>
    <string name="app_name">Exercise_Navigation</string>
    <string name="Disebud">Disebud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_transaction">HISTORY TRANSACTION</string>
    <string name="balance">BALANCE</string>
    <string name="transfer">TRANSFER</string>
    <string name="bank_prompt">Choose a Bank</string>
    <string-array name="bank_arrays">
        <item name="bank_arrays">BCA</item>
        <item name="bank_arrays">Mandiri</item>
        <item name="bank_arrays">BRI</item>
        <item name="bank_arrays">BNI</item>
        <item name="bank_arrays">CIMB Niaga</item>
        <item name="bank_arrays">BTPN</item>
        <item name="bank_arrays">Permata</item>
    </string-array>

    <string name="account_number">Account Number</string>
    <string name="name">Name</string>
    <string name="next">next</string>
    <string name="image_icon">TODO</string>
    <string name="todo_home">TODO</string>
    <string name="amount">Amount</string>
    <string name="done">DONE</string>
    <string name="amount_confirmation">Amount Confirmation</string>
    <string name="name_confirmation">Name Confirmation</string>
    <string name="to">TO: ?</string>
    <string name="send">SEND</string>
    <string name="default_sent_to_person">Sent to Person</string>
    <string name="default_account_number">account number</string>
    <string name="default_amount">Rp. amount</string>
    <string name="default_bank">bank</string>
</resources>