<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".screens.FragmentConfirmation">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_icon"
                android:src="@drawable/ic_baseline_check_circle_24" />

            <TextView
                android:id="@+id/sent_to_recipient_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_sent_to_person"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/sent_to_recipient_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_account_number"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/sent_to_recipient_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_amount"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sent_to_recipient_bank_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_bank"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="22sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/doneButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/done"
                android:textSize="30sp"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>